--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>C0okie'sLLD Portfolio</title>
-    <body> {
+    <body>
       background-image: url("Backgrounds/add8e6.png" width="500" height="500")
       <h1>About me</h1>
       <p>Nothing much here yet to see..(This site will be updated once i know CSS</p>
