--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html>
   <head>
     <title>C0okie'sLLD Portfolio</title>
-    <body>
-      background-image: url("Backgrounds/add8e6.png" width="500" height="500")
-      <h1>About me</h1>
-      <p>Nothing much here yet to see..(This site will be updated once i know CSS</p>
-    </body>
+    <style>
+      body {
+        background-image: url("Backgrounds/add8e6.png");
+        background-size: cover; /* Zorgt ervoor dat de achtergrond het hele scherm vult */
+        background-repeat: no-repeat;
+      }
+    </style>
   </head>
+  <body>
+    <h1>About me</h1>
+    <p>Nothing much here yet to see.. (This site will be updated once I know CSS)</p>
+  </body>
 </html>
