--- a/index.html
+++ b/index.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>C0okie'sLLD Portfolio</title>
     <style>
-      body {
-        background-image: url("Backgrounds/add8e6.png");
-        background-size: cover; /* Zorgt ervoor dat de achtergrond het hele scherm vult */
-        background-repeat: no-repeat;
-      }
+        body {
+            background-image: url("Backgrounds/add8e6.png");
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            height: 100vh; /* Hele scherm vullen */
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center; /* Tekst in het midden */
+            align-items: center;
+            text-align: center;
+            font-family: Arial, sans-serif;
+        }
+
+        h1 {
+            font-size: 2rem; /* Grotere tekst */
+        }
+
+        p {
+            font-size: 1.2rem; /* Grotere tekst voor betere leesbaarheid */
+            max-width: 80%;
+        }
     </style>
-  </head>
-  <body>
+</head>
+<body>
     <h1>About me</h1>
     <p>Nothing much here yet to see.. (This site will be updated once I know CSS)</p>
-  </body>
+</body>
 </html>
