--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
 </head>
 <body>
     <h1>About me</h1>
-    <p>Nothing much here yet to see.. (This site will be updated once I know CSS)</p>
+    <p>Hey! you probably saw my Portfolio from my github repo or profile. Well let me tell you a bit abt myself, I'm a 13 year old developer who's learning HTML, CSS, JS rn. I really like to be outside Play football W/ friends. n that's it's lmao. (Oh wait forgot to tell you something.. my favorite colour is Blue)</p>
 </body>
 </html>
