--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             font-size: 1.2rem; /* Grotere tekst voor betere leesbaarheid */
             max-width: 80%;
         }
+        h1 {
+            background-color: pink;
     </style>
 </head>
 <body>
