--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             max-width: 80%;
         }
         h1 {
-            background-color: pink;
+            text-color: pink;
+        }
     </style>
 </head>
 <body>
