--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             max-width: 80%;
         }
         h1 {
-            text-color: pink;
+            color: pink;
         }
     </style>
 </head>
