--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
 <html>
     <head>
         <link rel="Stylesheet" href="style.css">
+        <title>My Portfolio <p class></title>
+        <style>
+            .style {
+                color: lawngreen;
+                font-weight: bold;
+            }
+        </style>
         </head>
     <body>
         <h1>About me</h1>
         <p>Progress working on..</p>
+        <p class="style">This is a Style.</p>
+        <p>And this is a normal Paragraph.</p>
     </body>
 </html>
