--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         /* Style for the paragraph */
         .style {
-            color: lawngreen;
+            color: Aqua;
             font-weight: bold;
         }
 
@@ -48,8 +48,8 @@
 <body>
     <h1>About Me</h1>
     <p class="style">
-        I am 13 years old (turning 14 on May 10) and I am currently learning **HTML and CSS**.  
-        I am focused on mastering **web development** to create amazing websites.  
+        I am 13 years old (turning 14 on May 10) and I am currently learning HTML and CSS
+        I am focused on mastering web development to create amazing websites.  
     </p>
 </body>
 </html>
